<resources>
    <string name="app_name">My Profile</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Submit</string>
    <string name="previous">Go back to Home</string>
    <string name="FullName">Full Name: </string>
    <string name="Qualification">Qualification: </string>
    <string name="Profession">Profession: </string>
    <string name="Hobby">Hobby: </string>
    <string name="DreamJob">Dream Job: </string>
</resources>