<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    android:background="#FFF59D">

    #Full Name entry
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/Full_Name_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingLeft="50dp"
            android:text="@string/FullName"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <EditText
                android:id="@+id/Full_Name_Entry"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:inputType="textPersonName"
                android:paddingLeft="20dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".FirstFragment"
        android:orientation="horizontal"
        android:paddingTop="150dp"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/Qualification_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:paddingLeft="50dp"
            android:text="@string/Qualification" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <EditText
                android:id="@+id/Qualification_Entry"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".FirstFragment"
        android:orientation="horizontal"
        android:paddingTop="200dp"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/Profession_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:paddingLeft="50dp"
            android:text="@string/Profession" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <EditText
                    android:id="@+id/Profession_Entry"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".FirstFragment"
        android:orientation="horizontal"
        android:paddingTop="250dp"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/Hobby_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:paddingLeft="50dp"
            android:text="@string/Hobby" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <EditText
                    android:id="@+id/Hobby_Entry"
                    android:layout_width="250dp"
                    android:layout_height="30dp"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp"/>
            </LinearLayout>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".FirstFragment"
        android:orientation="horizontal"
        android:paddingTop="300dp"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/Dream_Job_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:paddingLeft="50dp"
            android:text="@string/DreamJob" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <EditText
                    android:id="@+id/Dream_Job_Entry"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp"/>
            </LinearLayout>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".FirstFragment"
        android:orientation="vertical"
        android:paddingTop="380dp"
        android:layout_gravity="center">
        <Button
            android:id="@+id/button_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="192dp"
            android:layout_gravity="center"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</RelativeLayout>


